--- a/main.html
+++ b/main.html
@@ -34,9 +34,7 @@
     <div class="item item25">25</div>
   </div>
 
-<script>
-//Your code goes here 
-</script>
-
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
+
